--- a/src/views/_includes/blocks/header.pug
+++ b/src/views/_includes/blocks/header.pug
@@ -9,7 +9,7 @@ header.header#header
       a.header__mail(href="#") 
         img(src="./assets/img/header/mail.svg", alt="")
       .header__enter
-        button.btn.--blue-full 
+        a.btn.--blue-full(href="https://coreapp.ai/app") 
           | Регистрация / Вход
       .header__menu-toggler(onclick="")
         .menu-toggler-1
@@ -26,19 +26,19 @@ header.header#header
         .row
           .col-xs-6
             .menu__col
-              a.menu__link(href="")
+              a.menu__link(href="https://ru.coreapp.ai/solutions/online-academy")
                 .menu__ico 
                   +svgsprite('menu-1') 
                 .menu__info
                   .menu__link-title Онлайн-академия
                   .menu__link-description Создавайте уроки, курсы и свою программу обучения
-              a.menu__link(href="")
+              a.menu__link(href="https://ru.coreapp.ai/solutions/corporate")
                 .menu__ico 
                   +svgsprite('menu-2') 
                 .menu__info
                   .menu__link-title Корпоративное обучение
                   .menu__link-description Обучайте и тестируйте сотрудников онлайн
-              a.menu__link(href="")
+              a.menu__link(href="https://ru.coreapp.ai/solutions/diagnostic")
                 .menu__ico 
                   +svgsprite('menu-3') 
                 .menu__info
@@ -46,13 +46,13 @@ header.header#header
                   .menu__link-description Проводите исследование аудитории – экономьте время и деньги
           .col-xs-6
             .menu__col
-              a.menu__link(href="")
+              a.menu__link(href="https://ru.coreapp.ai/solutions/iro")
                 .menu__ico 
                   +svgsprite('menu-4') 
                 .menu__info
                   .menu__link-title Вузам и ИРО
                   .menu__link-description Создайте единое цифровое образовательное пространство
-              a.menu__link(href="")
+              a.menu__link(href="https://ru.coreapp.ai/solutions/school")
                 .menu__ico 
                   +svgsprite('menu-5') 
                 .menu__info
@@ -62,33 +62,33 @@ header.header#header
       .col-md-3.col-sm-4.col-xs-12
         .menu__col.menu__col-platform
           .menu__title Платформа
-          a.menu__link(href="")
+          a.menu__link(href="https://ru.coreapp.ai/features/")
             .menu__ico 
               +svgsprite('menu-6') 
             .menu__info
               .menu__link-title Возможности
-          a.menu__link(href="")
+          a.menu__link(href="https://library.coreapp.ai/")
             .menu__ico 
               +svgsprite('menu-7') 
             .menu__info
               .menu__link-title Библиотека уроков
-          a.menu__link(href="")
+          a.menu__link(href="https://ru.coreapp.ai/update")
             .menu__ico 
               +svgsprite('menu-8') 
             .menu__info
               .menu__link-title Обновления
           .menu__title.--padding Обучаем
-          a.menu__link(href="")
+          a.menu__link(href="https://ru.coreapp.ai/journal")
             .menu__ico 
               +svgsprite('menu-9') 
             .menu__info
               .menu__link-title Cjournal
-          a.menu__link(href="")
+          a.menu__link(href="https://ru.coreapp.ai/events")
             .menu__ico 
               +svgsprite('menu-10') 
             .menu__info
               .menu__link-title Мероприятия
-          a.menu__link(href="")
+          a.menu__link(href="https://help-ru.coreapp.ai/")
             .menu__ico 
               +svgsprite('menu-11') 
             .menu__info
