--- a/src/scss/_base.scss
+++ b/src/scss/_base.scss
@@ -188,6 +188,11 @@ h4, .h4{
   line-height: 32px;
 }
 
+h5, .h5 {
+  font-size: 20px;
+  font-weight: 600;
+}
+
 .title__description{
   font-size: 24px;
   line-height: 32px;
