--- a/src/views/plans.pug
+++ b/src/views/plans.pug
@@ -37,7 +37,7 @@ block content
                       img(src="./assets/img/plans/guru.svg", alt="") 
                       | Гуру
                     .plans-card__description Для крупных компаний и экспертов
-                    .plans-card__price.--guru  от 11 990 ₽/мес.
+                    .plans-card__price.--guru 14 000 ₽/мес.
 
                 .plans-page__item
                   .plans-card__item.--online 
@@ -478,7 +478,7 @@ block content
             .plans-bcard__title 
               img(src="./assets/img/plans/guru.svg", alt="") 
               | Гуру
-            .plans-bcard__price от 11 990 ₽/мес.
+            .plans-bcard__price 14 000 ₽/мес.
             button.plans__btn Выбрать
           .plans-bcard.--online
             .plans-bcard__title 
