--- a/src/views/_includes/blocks/header.pug
+++ b/src/views/_includes/blocks/header.pug
@@ -4,7 +4,7 @@ header.header#header
       img(src="./assets/img/logo.svg", alt="")
     nav.header__nav
       .nav__link.nav__link__drop Решения
-      a.nav__link(href="#")  Тарифы
+      a.nav__link(href="./plans.html") Тарифы
     .header__btns 
       a.header__mail(href="#") 
         img(src="./assets/img/header/mail.svg", alt="")
