--- a/src/views/index.pug
+++ b/src/views/index.pug
@@ -347,7 +347,7 @@ block content
               li.plans__li Свой дизайн курса
               li.plans__li Собственный домен
           .plans__bottom 
-            .plans__price от 14 000 ₽ / месяц
+            .plans__price 14 000 ₽ / месяц
             button.plans__btn Выбрать
         .plans__item.--online
           .plans__top
